# watchlistarr-rust

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  config-example.yaml
src/: main.rs
src/config/: mod.rs
src/http/: mod.rs
src/models/: mod.rs
src/plex/: mod.rs
src/radarr/: mod.rs  mod.rs.working
src/sonarr/: mod.rs
